# StaB-ddG

./: .gitignore  LICENSE  README.md  ddg_utils.py  environment.yaml  megascale_finetune.py  ppi_dataset.py  pyproject.toml  run_stabddg.py  skempi_eval.py  skempi_eval_updated.py  skempi_finetune.py  skempi_finetune_updated.py  stability_finetune.py
baselines/: eval_utils.py  read_results_skempi_test.ipynb
data/SKEMPI/: filtered_skempi.csv  quality_filtering.ipynb  skempi_splits.ipynb  test_clusters.pkl  test_clusters.txt  test_pdb.pkl  train_clusters.pkl  train_clusters.txt  train_pdb.pkl
examples/list_of_mutations/: mutations.csv
examples/list_of_mutations/output/: input.csv  output.csv
examples/list_of_mutations/pdbs/: structure_cache.pkl
new_ckpts/: average_params.ipynb
protddg/: model.py  mpnn_utils.py  ppi_dataset.py  utils.py
stabddg/: model.py  mpnn_utils.py  ppi_dataset.py  utils.py
