[project]
name = "stab-ddg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython==1.85",
    "pandas==2.3.0",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "wandb==0.20.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.5",
    "ruff>=0.12.8",
]
